<resources>
    <string name="app_name">Eden</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="title_home">Home</string>
    <string name="profilo_fragment">Profilo fragment</string>
    <string name="bancarella_fragment">Bancarella fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_stand">Bancarella</string>
    <string name="app_bar_search">Search</string>
    <string name="registration_failure">Registrazione fallita</string>

    <string name="incorrect_password">Password errata</string>
    <string name="forgot_password">Password dimenticata?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_to_list">add to list</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="your_mail">your@mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_your_password">Forget your \n Password?</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="return_to_login">Return to \n Login</string>
    <string name="already_register">Already Register?</string>
    <string name="user_profile_toolbar_title">Profile</string>
    <string name="not_register">Not Register?</string>
    <string name="want_change_your_email">Want change your Email?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="hello">Hello</string>
    <string name="list_analcolici">Mostra Analcolici</string>
    <string name="list_alcolici">Mostra Alcolici</string>
    <string name="ordina_ricette_title">Ordina Ricette</string>
    <string name="want_reset_password">Want reset password?</string>
    <string name="load_fail">Caricamento Fallito</string>
    <string name="email_not_empty">Il campo email non può essere vuoto</string>
    <string name="password_reset_link">Link per il reset della password inviato</string>
    <string name="password_reset_link_error">Errore! Link per il reset della password non inviato</string>
    <string name="password_not_empty">Il campo password non può essere vuoto</string>
    <string name="password_too_short">La password deve essere composta da almeno 6 caratteri</string>
    <string name="successfull_login">Login avvenuto con successo</string>
    <string name="login_error">"Errore di login: "</string>
    <string name="name_not_empty">Il campo nome non può essere vuoto</string>
    <string name="invalid_password">Password not valid</string>
    <string name="password_requirements">Lunghezza da 6 a 15 caratteri, con numero e carattere speciale</string>
    <string name="successfull_registration">Utente registrato con successo</string>
    <string name="registration_error">"Errore di registrazione: "</string>
    <string name="title_activity_auth">Eden</string>
    <string name="bad_email">Email non valida</string>

    <string name="title_activity_search_pianta">SearchPiantaActivity</string>
    <string name="search_pianta">Cerca una pianta</string>
    <string name="filter_pianta_button">Filtra le piante</string>
    <string name="pianta_name">Nome pianta</string>
    <string name="title_favorites">Favorites</string>
    <string name="famiglia_botanica">Famiglia botanica</string>
    <string name="frequenza_innaffiamento">Frequenza innaffiamento</string>
    <string name="min_temperatura">Min temperatura</string>
    <string name="max_temperatura">Max temperatura</string>
    <string name="inizio_semina_label">Inizio Semina:</string>
    <string name="inizio_semina">Inizio semina</string>
    <string name="fine_semina_label">Fine Semina:</string>
    <string name="fine_semina">Fine semina</string>
    <string name="description_label">Descrizione:</string>
    <string name="descrizione_pianta">Descrizione pianta</string>
    <string name="fasi_description">Vedi fasi</string>
    <string name="spazio_necessario">Spazio necessario</string>
    <string name="tipo_terreno">Tipo terreno</string>
    <string name="altezza_max_prevista">Altezza max</string>
    <string name="esposizione">Esposizione</string>
    <string name="nome_fase_label">Fase:</string>
    <string name="nome_fase">Nome fase</string>
    <string name="inizio_fase_label">Inizio fase:</string>
    <string name="durata_fase_label">Durata fase:</string>
    <string name="durata_fase">Durata fase</string>
    <string name="descrizione_fase">Descrizione fase</string>
    <string name="inizio_fase">Inizio fase</string>
    <string name="search_pianta_toolbar">Cerca una pianta</string>
    <string name="filter_search_toolbar">Filtri ricerca</string>
    <string name="filter_button">Applica filtri</string>
    <string name="choose_inizio_semina">Inizio semina</string>
    <string name="choose_fine_semina">Fine semina</string>
    <string name="choose_number">Seleziona un numero</string>
    <string name="alert_dialog_no_filter_applied_title">Non è stato selezionato un filtro di ricerca</string>
    <string name="alert_dialog_no_filter_applied_message">Vuoi continuare senza filtri?</string>
    <string name="alert_dialog_no_filter_applied_positive_button">SI</string>
    <string name="alert_dialog_no_filter_applied_negative_button">NO</string>
    <string-array name="esposizione_sole_array">
        <item>mezz\'ombra</item>
        <item>soleggiato</item>
        <item>pieno sole</item>
    </string-array>
    <string name="oggi">Oggi</string>
    <string name="tra_giorni">Tra %1$d giorni</string>
    <string name="ritardo_giorno">In ritardo di 1 giorno</string>
    <string name="giorni_fa">In ritardo di %1$d giorni</string>
    <string name="domani">Domani</string>
    <string name="vedi_dettagli_pianta">Vedi dettagli pianta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aggiungi_prodotto">Aggiungi un prodotto</string>
    <string name="inserisci_prodotto_CAPS">Inserisci prodotto</string>
    <string name="tipo">Tipo</string>
    <string name="prezzo">Prezzo</string>
    <string name="pianta">Pianta (menu di ricerca)</string>
    <string name="quantita_piante">Numero piante</string>
    <string name="quantita_grammi">Grammi</string>
    <string name="fase_attuale">Fase Attuale</string>
    <string name="altre_informazioni">Altre informazioni</string>
    <string name="invia">Invia</string>
    <string name="inserisci_prodotto">Inserisci prodotto</string>
    <string name="disponibile_a_scambi">Disponibile a scambi</string>
    <string name="inserisci_fase">inserisci la fase</string>
    <string name="fasi">Inserisci la fase attuale</string>
    <string name="piante">piante</string>
    <string name="orto">Orto</string>

    <string name="inserisci_un_prodotto">Inserisci un nuovo prodotto</string>
    <string name="euro">euro</string>
    <string name="frequenza_innaffiamento_fase_label">Frequenza innaffiamento:</string>
    <string name="frequenza_innaffiamento_fase">Frequenza innaffiamento</string>
    <string name="note">Note</string>
    <string name="cancel">Annulla</string>
    <string name="wantLogout">Vuoi effettuare il logout?</string>
    <string name="logoutInfo">Verrai disconnesso dal tuo account e dovrai effettuare l\'accesso per riaccedervi.</string>
    <string name="exitApp">Vuoi uscire dall\'applicazione?</string>
    <string name="exitAppInfo">Uscendo dall\'applicazione, la tua sessione utente rimarrà comunque attiva.</string>
    <string name="inserisci_coltura">Inserisci coltura</string>
    <string name="title_irrigazioni">Irrrigazioni</string>
    <string name="date_picker_title">Seleziona data ultima irrigazione</string>
    <string name="quantita">Quantita</string>
    <string name="si">Sì :)</string>
    <string name="no">No :(</string>
    <string name="confermaInnaffiamento">Vuoi innaffiare queste piante?</string>
    <string name="ok">Ok</string>
    <string name="water">Innaffia</string>
    <string name="current_phase">Fase attuale</string>
    <string name="edit">Modifica</string>
    <string name="insertion_date">Data inserimento</string>
    <string name="quantity">Quantità</string>
    <string name="notes">Note</string>
    <string name="watering">Innaffiamento</string>
    <string name="last_watering">Ultimo innaffiamento</string>
</resources>