<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/md_theme_surfaceContainer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="3dp"
            app:srcCompat="@drawable/fase_card_illustration"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/nomeFaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_fase_label"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
                <TextView
                    android:id="@+id/nomeFaseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_fase"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="left">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/inizioFaseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inizio_fase_label"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        />
                    <TextView
                        android:id="@+id/inizioFaseDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inizio_fase"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/durataFaseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durata_fase_label"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        />
                    <TextView
                        android:id="@+id/durataFaseDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/durata_fase"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/descrizioneFaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    />
                <TextView
                    android:id="@+id/descrizioneFaseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descrizione_fase"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/frequenzaInnaffiamentoFaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequenza_innaffiamento_fase_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    />
                <TextView
                    android:id="@+id/frequenzaInnaffiamentoFaseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequenza_innaffiamento_fase_label"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>