<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <!-- Media -->
    <ImageView
        android:id="@+id/imageViewPhasePlant"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fase_card_illustration"
        />

    <com.google.android.material.card.MaterialCardView
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/md_theme_surfaceContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/phaseNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_fase_label"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
                <TextView
                    android:id="@+id/phaseNameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_fase"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="left">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/phaseStartLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inizio_fase_label"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        />
                    <TextView
                        android:id="@+id/phaseStartDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inizio_fase"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/phaseDurationLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durata_fase_label"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        />
                    <TextView
                        android:id="@+id/phaseDurationDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/durata_fase"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/phaseDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    />
                <TextView
                    android:id="@+id/phaseDescriptionDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descrizione_fase"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/wateringFrequencyFaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequenza_innaffiamento_fase_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    />
                <TextView
                    android:id="@+id/wateringFrequencyFaseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequenza_innaffiamento_fase_label"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</LinearLayout>
